# pipeline

./: pyproject.toml  requirements.txt
data/text_files/: example1.txt
notebook/: documnet.ipynb
notebook/data/vector_store/: chroma.sqlite3
