[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.1",
    "faiss-cpu>=1.12.0",
    "ipykernel>=7.0.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.1",
    "sentence-transformers>=5.1.1",
]
